# djocs

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  package-lock.json  pre-commit.yaml  pyproject.toml  tailwind.config.js
.devcontainer/: Dockerfile  bootstrap.sh  devcontainer.json  docker-compose.yml
app/: settings.py  urls.py
app/core/: admin.py  models.py  types.py  urls.py  views.py
app/core/migrations/: 0001_initial.py  0002_alter_historicalmessage_embedding_and_more.py  0002_userprofile_historicaluserprofile.py  0003_rename_conversation_chat_and_more.py  0004_alter_historicalknowledge_embedding_and_more.py  0004_remove_response_message_remove_response_user_and_more.py  0005_alter_message_author.py  0006_alter_historicalknowledge_category_and_more.py  0006_messageresponse_historicalmessageresponse.py  0007_knowledge_knowledgequestionembedding_and_more.py  0008_historicalknowledgequestionembedding_embedding_model_and_more.py  0010_rename_knowledgecategory_category_and_more.py
app/core/services/: chat.py  knowledge.py  knowledges.py  tokens.py
app/core/services/embeddings/: openai.py
app/core/services/llms/: openai.py
app/core/static/: styles.css
app/core/templates/: _base.html  base.html  index.html  message.html  response.html
app/core/templates/chat/: chat_form.html  chat_header.html  chat_message.html  chat_messages_list.html  chat_partial.html
app/core/templates/chat_history/: chat_history_header.html  chat_history_item.html  chat_history_page.html  chat_history_partial.html
app/core/templates/common/: header.html
scripts/: start.sh
src/app/: settings.py  urls.py
src/app/core/: models.py  views.py
src/app/core/migrations/: 0001_initial.py  0003_alter_historicalknowledge_embedding_and_more.py  0005_historicalknowledge_category_knowledge_category_and_more.py  0007_remove_historicalknowledge_metadata_and_more.py  0008_model_historicalmodel_chat_model_and_more.py  0009_chat_is_template_historicalchat_is_template.py  0011_historicalknowledge_author_knowledge_author_and_more.py
src/app/core/services/: chat.py  context.py  embeddings.py  knowledges.py  llm.py  messages.py
src/app/core/static/: styles.css
src/app/core/templates/: base.html  error.html  index.html
src/app/core/templates/chat/: chat_message.html  chat_message_and_form.html  chat_page.html  chat_partial.html
(+1 files in other folders)
